--- a/hello-wasm/index.html
+++ b/hello-wasm/index.html
@@ -25,6 +25,7 @@
       Token: <input id="token2" type="text" value="auth_token"></input>
       DateTime: <input id="datetime2" type="text" value="123"></input>
       <button id="send_v2">Send v2</button>
+    <p> Post result: <span id="result-post-v2"></span> </p>
     </div>
   </body>
 </html>
